Fix: title overlaps window size on smaller screens

--- a/styles/electric.css
+++ b/styles/electric.css
@@ -135,6 +135,13 @@ footer {
 }
 
 /*Smaller Mobile*/
+@media only screen and (max-width: 490px) {
+    main h1 {
+        margin-top: -20px;
+        font-size: 3.2em;
+    }
+}
+
 @media only screen and (max-width: 405px) {
     nav {
         background-color: red;
